--- a/wrapping/java/openjp2/CMakeLists.txt
+++ b/wrapping/java/openjp2/CMakeLists.txt
@@ -1,36 +1,42 @@
-#JavaOpenJPEG/CMakeLists.txt
+#wrapping/java/openjp2
 
 # First thing define the common source:
 set(openjpegjni_SRCS
   JavaOpenJPEGDecoder.c
-  JavaOpenJPEG.c
+  JavaOpenJPEGEncoder.c
+  ${OPENJPEG_SOURCE_DIR}/src/bin/common/color.c
   ${OPENJPEG_SOURCE_DIR}/src/bin/common/opj_getopt.c
   ${OPENJPEG_SOURCE_DIR}/src/bin/jp2/convert.c
-  index.c
   )
 
 # JNI binding:
 find_package(JNI REQUIRED)
-include_directories(${JNI_INCLUDE_DIRS})
-
-# required header file:
 include_directories(
-  ${OPENJPEG_BINARY_DIR}/src/lib/openjp2 # opj_config.h
-  ${OPENJPEG_SOURCE_DIR}/src/lib/openmj2
-  ${OPENJPEG_SOURCE_DIR}/src/bin/common
-  ${OPENJPEG_SOURCE_DIR}/src/bin/jp2
+  ${JNI_INCLUDE_DIRS}
+  ${OPENJPEG_SOURCE_DIR}/src/lib/openjp2 # openjpeg.h
+  ${OPENJPEG_BINARY_DIR}/src/lib/openjp2 # opj_config.h,opj_config_private.h
+  ${OPENJPEG_SOURCE_DIR}/src/bin/common  # color.h
+  ${OPENJPEG_BINARY_DIR}/src/bin/common  # opj_apps_config.h
+  ${OPENJPEG_SOURCE_DIR}/src/bin/jp2     # convert.h
   )
-
+if(BUILD_THIRDPARTY)
+ include_directories(
+  ${OPENJPEG_SOURCE_DIR}/thirdparty/include
+  ${OPENJPEG_SOURCE_DIR}/thirdparty/liblcms2/include
+  ${OPENJPEG_SOURCE_DIR}/thirdparty/libpng
+  ${OPENJPEG_SOURCE_DIR}/thirdparty/libtiff
+  ${OPENJPEG_BINARY_DIR}/thirdparty/libtiff
+ )
+endif()
+#
 add_library(openjpegjni MODULE
   ${openjpegjni_SRCS}
   )
 # Java module should not have a SONAME:
 set_property(TARGET openjpegjni PROPERTY NO_SONAME 1)
 
-# FIXME (need to use old API):
-if(BUILD_MJ2)
-  target_link_libraries(openjpegjni openmj2)
-endif()
+TARGET_LINK_LIBRARIES(openjpegjni ${OPENJPEG_LIBRARY_NAME})
+
 target_link_libraries(openjpegjni
   ${PNG_LIBNAME} ${TIFF_LIBNAME} ${LCMS_LIBNAME} ${Z_LIBNAME}
 )
